Fix overflow x scroll

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -2,6 +2,16 @@
     .nav-bar-mobile {
         display: none;
     }
+
+    .time-line {
+        width: 100%;
+        overflow-x: hidden;
+    }
+
+    .learn-about-our-latest-news {
+        width: 100%;
+        overflow-x: hidden;
+    }
 }
 
 
